@@ -114,30 +114,42 @@ The RequestToken contains the bulk of the changes so it's easiest to list it in 
 Make sure it looks like this:
 
   class RequestToken < OauthToken
-
+  
     attr_accessor :provided_oauth_verifier
-
+  
     def authorize!(user)
       return false if authorized?
       self.user = user
       self.authorized_at = Time.now
-      self.verifier=OAuth::Helper.generate_key(16)
+      self.verifier=OAuth::Helper.generate_key(16)[0,20] unless oauth10?
       self.save
     end
-
+  
     def exchange!
       return false unless authorized?
-      return false unless verifier==provided_oauth_verifier
-
+      return false unless oauth10? || verifier==provided_oauth_verifier
+    
       RequestToken.transaction do
         access_token = AccessToken.create(:user => user, :client_application => client_application)
         invalidate!
         access_token
       end
     end
-
+  
     def to_query
-      "#{super}&oauth_callback_confirmed=true"
+      if oauth10?
+        super
+      else
+        "#{super}&oauth_callback_confirmed=true"
+      end
+    end
+  
+    def oob?
+      self.callback_url=='oob'
+    end
+  
+    def oauth10?
+      (defined? OAUTH_10_SUPPORT) && OAUTH_10_SUPPORT && self.callback_url.blank?
     end
 
   end
@@ -147,30 +159,58 @@ Make sure it looks like this:
 All you need to do here is the change the authorize action to use the request_token callback url and add the oauth_verifier to the callback url. 
 
   def authorize
-      @token = RequestToken.find_by_token params[:oauth_token]
-      unless @token.invalidated?    
-        if request.post? 
-          if params[:authorize] == '1'
-            @token.authorize!(current_user)
-            redirect_url = @token.callback_url || @token.client_application.callback_url
-            if redirect_url
-              redirect_to "#{redirect_url}?oauth_token=#{@token.token}&oauth_verifier=#{@token.verifier}"
-            else
-              render :action => "authorize_success"
-            end
-          elsif params[:authorize] == "0"
-            @token.invalidate!
-            render :action => "authorize_failure"
+    @token = ::RequestToken.find_by_token params[:oauth_token]
+    unless @token.invalidated?    
+      if request.post? 
+        if params[:authorize] == '1'
+          @token.authorize!(current_user)
+          if @token.oauth10?
+            @redirect_url = params[:oauth_callback] || @token.client_application.callback_url
+          else
+            @redirect_url = @token.oob? ? @token.client_application.callback_url : @token.callback_url
           end
+        
+          if @redirect_url
+            if @token.oauth10?
+              redirect_to "#{@redirect_url}?oauth_token=#{@token.token}"
+            else
+              redirect_to "#{@redirect_url}?oauth_token=#{@token.token}&oauth_verifier=#{@token.verifier}"
+            end
+          else
+            render :action => "authorize_success"
+          end
+        elsif params[:authorize] == "0"
+          @token.invalidate!
+          render :action => "authorize_failure"
         end
-      else
-        render :action => "authorize_failure"
       end
+    else
+      render :action => "authorize_failure"
     end
+  end
+
+Alternatively if you haven't customized your controller you can replace the full controller with this:
+
+  require 'oauth/controllers/provider_controller'
+  class OauthController < ApplicationController
+    include OAuth::Controllers::ProviderController
+  end
+
+This way the controller will automatically include bug fixes in future versions of the plugin.
 
 The rest of the changes are in the plugin and will be automatically be included.
 
 *Note* OAuth 1.0a removes support for callback url's passed to the authorize page, clients must either define a callback url in their client application or pass one on the token request page.
+
+=== Supporting old OAuth 1.0 clients
+
+If you absolutely have to support older OAuth 1.0 clients on an optional basis, we now include a switch to turn it back on.
+
+For legacy OAUTH 1.0 support add the following constant in your environment.rb
+
+  OAUTH_10_SUPPORT = true
+
+Note, you should only do this if you really positively require to support old OAuth1.0 clients. There is a serious security issue with this.
 
 == Protecting your actions
 
