@@ -1,5 +1,5 @@
 require File.dirname(__FILE__) + '/../spec_helper'
-describe ClientApplication do #, :shared => true do
+describe ClientApplication do 
   fixtures :users, :client_applications, :oauth_tokens
   before(:each) do
     @application = ClientApplication.create :name => "Agree2", :url => "http://agree2.com", :user => users(:quentin)
