@@ -21,11 +21,11 @@ class OauthToken < ActiveRecord::Base
     "oauth_token=#{token}&oauth_token_secret=#{secret}"
   end
     
-protected
+  protected
   
   def generate_keys
-    @oauth_token = client_application.oauth_server.generate_credentials
-    self.token = @oauth_token[0][20]
-    self.secret = @oauth_token[1][40]
+    oauth_token = client_application.oauth_server.generate_credentials
+    self.token = oauth_token[0][0,20]
+    self.secret = oauth_token[1][0,40]
   end
 end
