@@ -34,7 +34,7 @@ class RequestToken < OauthToken
   end
   
   def oauth10?
-    self.callback_url.blank?
+    (defined? OAUTH_10_SUPPORT) && OAUTH_10_SUPPORT && self.callback_url.blank?
   end
 
 end
